--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -16,8 +16,6 @@ permissions:
 jobs:
   install-and-build-dependencies:
     runs-on: ubuntu-latest
-    env:
-      NUXT_PUBLIC_API_URL: https://ceres-demo.plentymarkets-cloud01.com
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -48,10 +46,10 @@ jobs:
       - name: Install Dependencies
         run: yarn --frozen-lockfile
 
-      # - name: Setup environment
-      #   run: |
-      #     touch apps/web/.env
-      #     echo API_ENDPOINT=${{ secrets.SYSTEM_DOMAIN }} >> apps/web/.env
+      - name: Setup environment
+        run: |
+          touch apps/web/.env
+          echo NUXT_PUBLIC_API_URL=https://ceres-demo.plentymarkets-cloud01.com >> apps/web/.env
 
       - name: Build
         run: yarn build
